# audiosep

./: .gitignore  README.md  mini_projets.md  pyproject.toml
configurations/: spectro_unet_skip.yaml  unet_svs_original_voice.yaml  waveunet.yaml
configurations/fitting/: unet_svs_original_voice_tunable.yaml  wave_unet.yaml
configurations/sweep/: unet_svs_original_voice_tunable.wandb.yaml
configurations/sweep/unet_svs_original_voice.wandb/: unet_svs_original_voice_tunable.wandb.yaml
configurations/sweep/wave_unet.wandb/: wave_unet.wandb.yaml
configurations/testing/: spectro_unet_skip.yaml  unet_svs_original_voice.yaml  waveunet.yaml
examples/: train.py  train_voice_only.py
notebooks/: data_exploration.ipynb  load_spectrogram.ipynb  qualitative_and_quantitative_analysis.ipynb  test_one_sample.ipynb
scripts/: post_install  runme.py  test_conv1d_mps.py  train_wavenet.py  upload_dataset_wandb.py
scripts/generalisation/: create_mix.py  create_voices_from_wav.py
src/audiosep/: __init__.py  utils.py
src/audiosep/data/: __init__.py  waveform_datamodule.py  waveform_dataset.py
src/audiosep/data/spectrogram/: datamodule.py  dataset.py  spectrogram.py
src/audiosep/data/spectrogram_orig/: datamodule.py  dataset.py  spectogram_dataset.py  spectrogram.py  waveform_dataset.py
src/audiosep/data/wave/: datamodule.py  dataset.py
src/audiosep/io/: __init__.py  audio.py
src/audiosep/models/: __init__.py  spectro_unet.py  spectro_unet_original.py  spectro_unet_original_tunable.py  spectro_unet_skip.py  spectro_uno_original.py  wave_unet.py
