[project]
name = "audiosep"
version = "0.0.1"
description = "Audio source separation"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "yannis kolodziej & simon sassi", email = "example@example.com" } ]
dependencies = [
    "torch>=2.0.0", 
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "librosa>=0.10.0",
    "lightning>=2.0.0",
    "tensorboard>=2.12.0",
    "wandb>=0.12.10"
]
[project.urls]
Homepage = "https://github.com/siemovit/audiosep"
Source = "https://github.com/siemovit/audiosep"

[dependency-groups]
dev = [
    "wandb>=0.23.1",
]

[tools.mypy]
mypy_path = './src'

[tool.uv]
package = true

[tool.uv.sources]
editable_library = { path = "src/", editable = true }