[project]
name = "audiosep"
version = "0.0.1"
description = "Audio source separation"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "yannis kolodziej & simon sassi", email = "example@example.com" } ]
dependencies = [
    "torch>=2.0.0", 
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "librosa>=0.10.0",
    "lightning[pytorch-extra]>=2.0.0",
    "tensorboard>=2.12.0",
    "wandb==0.22.3",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
]
[project.urls]
Homepage = "https://github.com/siemovit/audiosep"
Source = "https://github.com/siemovit/audiosep"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]

[tools.mypy]
mypy_path = './src'

[tool.uv]
package = true

[tool.uv.sources]
audiosep = { path = "src", editable = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
